+ added support for cesspit information

--- a/test/test.config.ini
+++ b/test/test.config.ini
@@ -19,3 +19,10 @@ norm.pm_10 = 50
 [HUMIDITY]
 host = 192.168.1.9:12002/humidity_in
 
+[CESSPIT]
+host = 192.168.1.5:12003
+warning-level: 80
+critical-level: 95
+delay-denoting-failure-min: 60
+
+
