(+) reconfiguration: using server names instead of IP numbers (+) RestInfo: add support for luminescence and daylight

--- a/test/test.config.ini
+++ b/test/test.config.ini
@@ -2,27 +2,33 @@
 db = bhs_test
 user = ${REST-INFO:user}
 password = ${REST-INFO:password}
-host = 192.168.1.5
+host = db.home.online
 
 [TEMPERATURE]
-host.1 = 192.168.1.5:12001
-host.2 = 192.168.1.9:12001
+host.1 = red.home.online:12001
+host.2 = weather.home.online:12001
 
 [PRESSURE]
-host = 192.168.1.9:12002/pressure
+host = weather.home.online:12002/pressure
 
 [AIR-QUALITY]
-host = 192.168.1.9:12002/air_quality
+host = weather.home.online:12002/air_quality
 norm.pm_2_5 = 25
 norm.pm_10 = 50
 
 [HUMIDITY]
-host = 192.168.1.9:12002/humidity_in
+host = weather.home.online:12002/humidity_in
 
 [CESSPIT]
-host = 192.168.1.5:12003
+host = red.home.online:12003
 warning-level: 80
 critical-level: 95
 delay-denoting-failure-min: 60
+
+[DAYLIGHT]
+host = weather.home.online:12002/daylight
+
+[RAIN]
+host = weather.home.online:12002/rain
 
 
