REST support for Soil Moisture

--- a/test/test.config.ini
+++ b/test/test.config.ini
@@ -31,4 +31,5 @@ host = weather.home.online:12002/daylight
 [RAIN]
 host = weather.home.online:12002/rain
 
-
+[SOIL-MOISTURE]
+host = copper.home.online:12004
