--- a/test/test.config.ini
+++ b/test/test.config.ini
@@ -28,8 +28,16 @@ delay-denoting-failure-min: 60
 [DAYLIGHT]
 host = weather.home.online:12002/daylight
 
-[RAIN]
-host = weather.home.online:12002/rain
-
 [SOIL-MOISTURE]
 host = copper.home.online:12004
+
+[SOLAR-PLANT]
+host = red.home.online:12005
+max-nominal-power = 7900
+
+[WIND]
+host = weather.home.online:12002/wind
+
+[RAIN-GAUGE]
+host = weather.home.online:12002/rain
+mm-per-hour = 0.2794
