+ added support for Water Tank

--- a/test/test.config.ini
+++ b/test/test.config.ini
@@ -41,3 +41,6 @@ host = weather.home.online:12002/wind
 [RAIN-GAUGE]
 host = weather.home.online:12002/rain
 mm-per-hour = 0.2794
+
+[WATER-TANK]
+host = copper.home.online:12003
