(+) REST interface enriched with graph for last 24hrs Cesspit state (/graph/cesspit/24h) Beware: the configuration now shall provide configuration endpoint of Cesspit REST service (currently: red.home.online:12003/config)

--- a/test/test.config.ini
+++ b/test/test.config.ini
@@ -21,6 +21,7 @@ host = weather.home.online:12002/humidity_in
 
 [CESSPIT]
 host = red.home.online:12003
+config = /config
 warning-level: 80
 critical-level: 95
 delay-denoting-failure-min: 60
