+ system status, intial commit; not yet as a part of the interface

--- a/test/test.config.ini
+++ b/test/test.config.ini
@@ -45,3 +45,30 @@ mm-per-hour = 0.2794
 
 [WATER-TANK]
 host = copper.home.online:12003
+
+[INTERNET]
+host=red.home.online:12006
+
+[SYSTEM-STATUS]
+polling-period-s = 10
+service.01 = red.home.online:12001
+service.01.name = temperature@red
+service.02 = weather.home.online:12001
+service.02.name = temperature@violet
+service.03 = weather.home.online:12002
+service.03.name = weather@violet
+service.04 = red.home.online:12003
+service.04.name = cesspit@red
+service.05 = copper.home.online:12004
+service.05.name = soil-moisture@copper
+service.06 = red.home.online:12005
+service.06.name = solar-plant@red
+service.07 = copper.home.online:12003
+service.07.name = water-tank@copper
+service.08 = red.home.online:12006
+service.08.name = speedtest@red
+service.09 = red.home.online:12002
+service.09.name = lights@red
+# service.10 = red.home.online:1200?
+# service.10.name = irrigation@red
+
