--- a/test/test.config.ini
+++ b/test/test.config.ini
@@ -50,7 +50,8 @@ host = copper.home.online:12003
 host=red.home.online:12006
 
 [SYSTEM-STATUS]
-polling-period-s = 10
+polling-period-ok-s = 10
+polling-period-ko-s = 1
 service.01 = red.home.online:12001
 service.01.name = temperature@red
 service.02 = weather.home.online:12001
