+ rest: hosts statuses + rest: cesspit log

--- a/test/test.config.ini
+++ b/test/test.config.ini
@@ -22,6 +22,7 @@ host = weather.home.online:12002/humidity_in
 [CESSPIT]
 host = red.home.online:12003
 config = /config
+log = /log
 warning-level: 80
 critical-level: 95
 delay-denoting-failure-min: 60
@@ -72,4 +73,11 @@ service.09 = red.home.online:12002
 service.09.name = lights@red
 # service.10 = red.home.online:1200?
 # service.10.name = irrigation@red
+host.01 = red.home.online:12006
+host.01.name = RPiRed
+host.02 = weather.home.online:12002
+host.02.name = RPiViolet
+
+[HOST-STATUS]
+polling-period-s=10
 
